add npm build and serve to package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite ./src"
+    "dev": "vite ./src",
+    "build": "vite build ./src",
+    "serve": "vite preview ./src"
   },
   "keywords": [],
   "author": "",
